--- a/spec/fixtures/vcr_cassettes/MovieService/movie_service/find_movie_by_id.yml
+++ b/spec/fixtures/vcr_cassettes/MovieService/movie_service/find_movie_by_id.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 25 Aug 2023 09:51:52 GMT
+      - Fri, 25 Aug 2023 15:55:00 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=23524
+      - public, max-age=25294
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '8209'
+      - '1819'
       X-Memc-Expires:
-      - '20011'
+      - '21105'
       Etag:
-      - W/"31dc94ccb7a3b3a937e62738df24dd17"
+      - W/"fca5e3555e619db2ab8c7c30c82b3d74"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 15f2e88ce5f742da8075e454f83e8f5e.cloudfront.net (CloudFront)
+      - 1.1 3646e820868d96a9a274b6177bcbb8ec.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD51-C4
+      - MIA3-C5
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - eeRfCR7qF6wodnVc0xm838KDFdOMySiZ3eYKYPq8eYkIvXbfzqmghg==
+      - BRHeULUaQzev9JOYeyJdDl6EaNn6vDXrNYzaEW6bROJ-AFWAJNyQRA==
       Age:
-      - '22772'
+      - '22088'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -66,6 +66,6 @@ http_interactions:
         of bloody revenge.","popularity":123.773,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.709,"vote_count":18482}'
-  recorded_at: Fri, 25 Aug 2023 16:11:23 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.709,"vote_count":18483}'
+  recorded_at: Fri, 25 Aug 2023 22:03:08 GMT
 recorded_with: VCR 6.2.0
