--- a/spec/fixtures/vcr_cassettes/Movies_Results_Page/has_a_title.yml
+++ b/spec/fixtures/vcr_cassettes/Movies_Results_Page/has_a_title.yml
@@ -236,4 +236,240 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
   recorded_at: Fri, 25 Aug 2023 16:33:15 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/search/movie?api_key=api_key&query=
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Fri, 25 Aug 2023 15:43:42 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=22054
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 0ad04c4a8f86817194f97d0815bf2d05
+      X-Memc-Age:
+      - '24870'
+      X-Memc-Expires:
+      - '1282'
+      Etag:
+      - W/"0e23279b004381f72a34159d5c7dfd1f"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 bae6de0befe82416d15a4f0db2e42a20.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - ATL58-P2
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - Pj-0x5Bf3fqrgLn43gvF_0xZ-dJY_KsgjzYWQOQYlb13BtS0WavNTA==
+      Age:
+      - '3216'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
+  recorded_at: Fri, 25 Aug 2023 16:37:18 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/search/movie?api_key=api_key&query=
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Fri, 25 Aug 2023 15:43:42 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=22054
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 0ad04c4a8f86817194f97d0815bf2d05
+      X-Memc-Age:
+      - '24870'
+      X-Memc-Expires:
+      - '1282'
+      Etag:
+      - W/"0e23279b004381f72a34159d5c7dfd1f"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 52cf696b7d467b009c1bb9273fc4081c.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - ATL58-P2
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - JTo2b0koVPVHn-QEBy_x_cIV90NN6VkgpJ79jSYdkpEKQeri2pEeXw==
+      Age:
+      - '3524'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
+  recorded_at: Fri, 25 Aug 2023 16:42:26 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/search/movie?api_key=api_key&query=
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Fri, 25 Aug 2023 15:43:42 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=22054
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 0ad04c4a8f86817194f97d0815bf2d05
+      X-Memc-Age:
+      - '24870'
+      X-Memc-Expires:
+      - '1282'
+      Etag:
+      - W/"0e23279b004381f72a34159d5c7dfd1f"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 d2a8134957dfaa119e0955491e61bb9c.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - ATL58-P2
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - JfIoauxlaqQfeO0eYTD4-53iN1qmxOHTC0c-LaVGkKPLOUerHpegKw==
+      Age:
+      - '3582'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
+  recorded_at: Fri, 25 Aug 2023 16:43:24 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/search/movie?api_key=api_key&query=
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.10
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Fri, 25 Aug 2023 15:43:42 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=22054
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 0ad04c4a8f86817194f97d0815bf2d05
+      X-Memc-Age:
+      - '24870'
+      X-Memc-Expires:
+      - '1282'
+      Etag:
+      - W/"0e23279b004381f72a34159d5c7dfd1f"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 57e3d5d3b005fa4d07716cb3ffc6ecc0.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - ATL58-P2
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - isGHRJH23bCW_zJa-s_lS_qkLM_9RJvw2JmkQPtmtMyJmFQRL15m6Q==
+      Age:
+      - '6418'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
+  recorded_at: Fri, 25 Aug 2023 17:30:40 GMT
 recorded_with: VCR 6.2.0
