--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,14 @@
 !/tmp/storage/
 !/tmp/storage/.keep
 
+
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-echo coverage >> .gitignore
 
 # Ignore application configuration
 /config/application.yml
+
+/coverage
