--- a/spec/fixtures/vcr_cassettes/MovieDbService/movie_details/returns_movie_details.yml
+++ b/spec/fixtures/vcr_cassettes/MovieDbService/movie_details/returns_movie_details.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.themoviedb.org/movie/100?api_key=<API_KEY>
+    uri: https://api.themoviedb.org/3/movie/100?api_key=<API_KEY>
     body:
       encoding: US-ASCII
       string: ''
@@ -15,35 +15,59 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 404
-      message: Not Found
+      code: 200
+      message: OK
     headers:
       Content-Type:
-      - text/html
+      - application/json;charset=utf-8
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
       Date:
-      - Thu, 12 Oct 2023 14:01:23 GMT
+      - Thu, 12 Oct 2023 17:36:59 GMT
       Server:
       - openresty
+      Cache-Control:
+      - public, max-age=28262
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 502221c590c8994507bac9cb8903859b
+      X-Memc-Age:
+      - '13681'
+      X-Memc-Expires:
+      - '13261'
+      Etag:
+      - W/"1e049ea5cdeeccf6b1bb5ac1d27f0f17"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Error from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 d50ea39d66fbd0459a5507b1cf70c2dc.cloudfront.net (CloudFront)
+      - 1.1 cff65cf23da207c67757b7a558212198.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-C1
+      - DFW57-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - v7v77fDU7qBTtK5m-N3pewq536VC0TiKs4I7pUKw7HPl2Nfdx6noag==
+      - "-vrB6ENwD-de4f5VlfFD-M9fToFg8CDbUsrmz7KyBAHfuF86ZBMkqw=="
+      Age:
+      - '803'
     body:
       encoding: ASCII-8BIT
-      string: "<html>\r\n<head><title>404 Not Found</title></head>\r\n<body>\r\n<center><h1>404
-        Not Found</h1></center>\r\n<hr><center>openresty</center>\r\n</body>\r\n</html>\r\n"
-  recorded_at: Thu, 12 Oct 2023 14:01:23 GMT
+      string: '{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","belongs_to_collection":null,"budget":1350000,"genres":[{"id":35,"name":"Comedy"},{"id":80,"name":"Crime"}],"homepage":"http://www.universalstudiosentertainment.com/lock-stock-and-two-smoking-barrels/","id":100,"imdb_id":"tt0120735","original_language":"en","original_title":"Lock,
+        Stock and Two Smoking Barrels","overview":"A card shark and his unwillingly-enlisted
+        friends need to make a lot of cash quick after losing a sketchy poker match.
+        To do this they decide to pull a heist on a small-time gang who happen to
+        be operating out of the flat next door.","popularity":17.924,"poster_path":"/8kSerJrhrJWKLk1LViesGcnrUPE.jpg","production_companies":[{"id":491,"logo_path":"/5LvDUt3KmvRnXQ4NrdWJYHeuA8J.png","name":"Summit
+        Entertainment","origin_country":"US"},{"id":21920,"logo_path":null,"name":"The
+        Steve Tisch Company","origin_country":""},{"id":13419,"logo_path":null,"name":"SKA
+        Films","origin_country":"GB"},{"id":1382,"logo_path":"/sOg7LGESPH5vCTOIdbMhLuypoLL.png","name":"PolyGram
+        Filmed Entertainment","origin_country":"US"},{"id":20076,"logo_path":"/i9qXGJIP9fGN22PP5jXUVENbyHi.png","name":"HandMade
+        Films","origin_country":"GB"}],"production_countries":[{"iso_3166_1":"GB","name":"United
+        Kingdom"},{"iso_3166_1":"US","name":"United States of America"}],"release_date":"1998-08-28","revenue":28356188,"runtime":105,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
+        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.126,"vote_count":6082}'
+  recorded_at: Thu, 12 Oct 2023 17:50:22 GMT
 recorded_with: VCR 6.2.0
