--- a/spec/fixtures/vcr_cassettes/godfather_viewing_party.yml
+++ b/spec/fixtures/vcr_cassettes/godfather_viewing_party.yml
@@ -25,34 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 12 Oct 2023 00:46:25 GMT
+      - Thu, 12 Oct 2023 21:17:21 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22181
+      - public, max-age=23576
       X-Memc:
       - HIT
       X-Memc-Key:
       - 9d48db5c244b9c3e3d162ef155211175
       X-Memc-Age:
-      - '21889'
+      - '22981'
       X-Memc-Expires:
-      - '2907'
+      - '4371'
       Etag:
-      - W/"b27668b5b84c051d97dfabbaab2b49db"
+      - W/"07c6d081a4ad84ebc54d67b2ca1a7b71"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 b5f8c8f90c9496ee21123cc323818c44.cloudfront.net (CloudFront)
+      - 1.1 89f2505f9f8dbcdacd6d4a40d558810c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAH50-C4
+      - DFW57-P2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - h2mcUMgAqlO3djTvgJ4amGON9bvAuLHd1d260-ObUUqWS7RVA3uGiw==
+      - ZbXQ2GM-cuXzYwNzc9cy0MhfA_-eBjfQw9lJQwfL2J4Hw4U17JRXsQ==
+      Age:
+      - '4348'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -61,9 +63,9 @@ http_interactions:
         fictional Italian-American Corleone crime family. When organized crime family
         patriarch, Vito Corleone barely survives an attempt on his life, his youngest
         son, Michael steps in to take care of the would-be killers, launching a campaign
-        of bloody revenge.","popularity":124.552,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        of bloody revenge.","popularity":120.233,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
-        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.709,"vote_count":18738}'
-  recorded_at: Thu, 12 Oct 2023 00:46:25 GMT
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.708,"vote_count":18740}'
+  recorded_at: Thu, 12 Oct 2023 22:29:49 GMT
 recorded_with: VCR 6.2.0
