refactor: adds movie service and facade, refactors show page to use

--- a/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/show_a_movie_containing_the_keyword.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/show_a_movie_containing_the_keyword.yml
@@ -52,9 +52,9 @@ http_interactions:
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - aNrC9hVppOtOG5FGGoaiGuGn26XVxGIoUL4mErdgaLhlbNtjC6vWHw==
+      - "-KQzLDu-snlExQOgjgDM-OMqmpL04Snkkyj8yUZjpZyq82KSnFXAEA=="
       Age:
-      - '870'
+      - '6526'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","genre_ids":[18,878,53,12],"id":42470,"original_language":"en","original_title":"The
@@ -65,5 +65,5 @@ http_interactions:
         in an assassination attempt. Now he is in a race to discover who is the target,
         and where the dolphins are, before the attempt is carried out.","popularity":2.988,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","release_date":"1973-12-19","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}],"total_pages":1,"total_results":1}'
-  recorded_at: Thu, 12 Oct 2023 21:55:50 GMT
+  recorded_at: Thu, 12 Oct 2023 23:30:06 GMT
 recorded_with: VCR 6.2.0
