--- a/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/page_still_renders_when_nothing_is_entered_into_the_search.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/page_still_renders_when_nothing_is_entered_into_the_search.yml
@@ -35,28 +35,26 @@ http_interactions:
       X-Memc-Expires:
       - '7827'
       Date:
-      - Thu, 12 Oct 2023 20:58:34 GMT
+      - Fri, 13 Oct 2023 03:52:57 GMT
       Cache-Control:
-      - public, max-age=24580
+      - public, max-age=22257
       Etag:
       - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Hit from cloudfront
+      - RefreshHit from cloudfront
       Via:
-      - 1.1 e4ca364cc5959e3bf697ae231c5b56b0.cloudfront.net (CloudFront)
+      - 1.1 c29390732f5bc4b2c7832623ae6e492e.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - Bw7Y5bloCPLz6jril720PThLpqw6Qay5b_8b2KqKzZXdZrzgK_q87Q==
-      Age:
-      - '9092'
+      - 42jJrCrbH8MLUx01pSjDJRG-yWUuhs90J6IYquQxmIwBabFtUZTpNQ==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
-  recorded_at: Thu, 12 Oct 2023 23:30:06 GMT
+  recorded_at: Fri, 13 Oct 2023 03:52:57 GMT
 recorded_with: VCR 6.2.0
