--- a/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/show_a_movie_containing_the_keyword.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/show_a_movie_containing_the_keyword.yml
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 29f1da35ce271d2cdc88184ed0c1f86c.cloudfront.net (CloudFront)
+      - 1.1 ec4d04f2befcd6652834fd368a8b671e.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - "-KQzLDu-snlExQOgjgDM-OMqmpL04Snkkyj8yUZjpZyq82KSnFXAEA=="
+      - CcbnoYLSdLWKu4PCKaPhME1C2L-ruVrJvRVg3Hf1uG3Be2IELDGdEg==
       Age:
-      - '6526'
+      - '22297'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","genre_ids":[18,878,53,12],"id":42470,"original_language":"en","original_title":"The
@@ -65,5 +65,5 @@ http_interactions:
         in an assassination attempt. Now he is in a race to discover who is the target,
         and where the dolphins are, before the attempt is carried out.","popularity":2.988,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","release_date":"1973-12-19","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}],"total_pages":1,"total_results":1}'
-  recorded_at: Thu, 12 Oct 2023 23:30:06 GMT
+  recorded_at: Fri, 13 Oct 2023 03:52:57 GMT
 recorded_with: VCR 6.2.0
