--- a/spec/fixtures/vcr_cassettes/Viewing_Party_New/displays_form.yml
+++ b/spec/fixtures/vcr_cassettes/Viewing_Party_New/displays_form.yml
@@ -25,36 +25,34 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 13 Oct 2023 03:24:20 GMT
+      - Fri, 13 Oct 2023 15:57:06 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25226
+      - public, max-age=22494
       X-Memc:
       - HIT
       X-Memc-Key:
       - 4b195b5bc531430b075228584131165f
       X-Memc-Age:
-      - '9670'
+      - '989'
       X-Memc-Expires:
-      - '16314'
+      - '24461'
       Etag:
-      - W/"45ab8083ddd2d8b96e3af5e356a60ca5"
+      - W/"ff3598050ab5cdf1cc1045f0d7165e61"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 e158a5cd644f102abc630a9f56b59d78.cloudfront.net (CloudFront)
+      - 1.1 e8f4efabe0471003eea37763eaec60fa.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - ORD51-C4
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - JeqBXVw5MiWdepGLMl_lNXyno4PjzD1mDChW7NK-B0jTej_r5o6Lmw==
-      Age:
-      - '7580'
+      - i2_AoDHj2A3PDD_bZYNdISXnoO2RMYcrcECWndL2S6aZs107_mNetA==
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","belongs_to_collection":null,"budget":0,"genres":[{"id":18,"name":"Drama"},{"id":878,"name":"Science
@@ -64,10 +62,10 @@ http_interactions:
         dolphins to speak and understand English, although they do have a limited
         vocabulary. When the dolphins are stolen, he discovers they''re to be used
         in an assassination attempt. Now he is in a race to discover who is the target,
-        and where the dolphins are, before the attempt is carried out.","popularity":2.988,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","production_companies":[{"id":494,"logo_path":"/ioc65azmsAeL1XQN4dFnrpdJoMO.png","name":"AVCO
+        and where the dolphins are, before the attempt is carried out.","popularity":4.183,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","production_companies":[{"id":494,"logo_path":"/ioc65azmsAeL1XQN4dFnrpdJoMO.png","name":"AVCO
         Embassy Pictures","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1973-12-19","revenue":0,"runtime":104,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Unwittingly,
         he trained a dolphin to kill the president of the United States.","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}'
-  recorded_at: Fri, 13 Oct 2023 05:30:40 GMT
+  recorded_at: Fri, 13 Oct 2023 15:57:06 GMT
 recorded_with: VCR 6.2.0
