--- a/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/page_still_renders_when_nothing_is_entered_into_the_search.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/page_still_renders_when_nothing_is_entered_into_the_search.yml
@@ -24,37 +24,37 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
+      Date:
+      - Fri, 13 Oct 2023 15:57:05 GMT
       Server:
       - openresty
+      Cache-Control:
+      - public, max-age=23622
       X-Memc:
       - HIT
       X-Memc-Key:
       - 0ad04c4a8f86817194f97d0815bf2d05
       X-Memc-Age:
-      - '17253'
+      - '20592'
       X-Memc-Expires:
-      - '7827'
-      Date:
-      - Fri, 13 Oct 2023 03:52:57 GMT
-      Cache-Control:
-      - public, max-age=22257
+      - '2056'
       Etag:
       - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - RefreshHit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 c29390732f5bc4b2c7832623ae6e492e.cloudfront.net (CloudFront)
+      - 1.1 4657350ff2715d2be9ad9783d238616a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - ORD51-C4
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 42jJrCrbH8MLUx01pSjDJRG-yWUuhs90J6IYquQxmIwBabFtUZTpNQ==
+      - ZXwQNOOT3ot30rwE_Ggf-eav3DtTUHZ2JgT9KWT0XX55YYRcUcqpDw==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
-  recorded_at: Fri, 13 Oct 2023 03:52:57 GMT
+  recorded_at: Fri, 13 Oct 2023 15:57:05 GMT
 recorded_with: VCR 6.2.0
