--- a/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/show_a_movie_containing_the_keyword.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/show_a_movie_containing_the_keyword.yml
@@ -25,36 +25,34 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 12 Oct 2023 21:41:20 GMT
+      - Fri, 13 Oct 2023 15:57:04 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=24915
+      - public, max-age=24092
       X-Memc:
-      - MISS, STORE
+      - HIT
       X-Memc-Key:
       - b68a3b49b3e729c730bd1cd601e2d306
       X-Memc-Age:
-      - '0'
+      - '2431'
       X-Memc-Expires:
-      - '24915'
+      - '23149'
       Etag:
-      - W/"deeb145f8752b2ed5289bbeeef614af1"
+      - W/"fc6d96ad90e474d75f759f65a8a075ef"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 ec4d04f2befcd6652834fd368a8b671e.cloudfront.net (CloudFront)
+      - 1.1 e19510111c3ca1af222e637a577b0c5a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - ORD51-C4
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - CcbnoYLSdLWKu4PCKaPhME1C2L-ruVrJvRVg3Hf1uG3Be2IELDGdEg==
-      Age:
-      - '22297'
+      - nLx-JRp0QcOHUySQxDO5n0RVdpWO0CWdgKl_ho9J_edAT6-jV0EhtQ==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","genre_ids":[18,878,53,12],"id":42470,"original_language":"en","original_title":"The
@@ -63,7 +61,7 @@ http_interactions:
         dolphins to speak and understand English, although they do have a limited
         vocabulary. When the dolphins are stolen, he discovers they''re to be used
         in an assassination attempt. Now he is in a race to discover who is the target,
-        and where the dolphins are, before the attempt is carried out.","popularity":2.988,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","release_date":"1973-12-19","title":"The
+        and where the dolphins are, before the attempt is carried out.","popularity":4.183,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","release_date":"1973-12-19","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}],"total_pages":1,"total_results":1}'
-  recorded_at: Fri, 13 Oct 2023 03:52:57 GMT
+  recorded_at: Fri, 13 Oct 2023 15:57:04 GMT
 recorded_with: VCR 6.2.0
