refactor: reviews poro and update movies facade and show page to utilize

--- a/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/show_a_movie_containing_the_keyword.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/show_a_movie_containing_the_keyword.yml
@@ -25,34 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 13 Oct 2023 15:57:04 GMT
+      - Fri, 13 Oct 2023 15:16:33 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=24092
+      - public, max-age=25580
       X-Memc:
-      - HIT
+      - MISS, STORE
       X-Memc-Key:
       - b68a3b49b3e729c730bd1cd601e2d306
       X-Memc-Age:
-      - '2431'
+      - '0'
       X-Memc-Expires:
-      - '23149'
+      - '25580'
       Etag:
       - W/"fc6d96ad90e474d75f759f65a8a075ef"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 e19510111c3ca1af222e637a577b0c5a.cloudfront.net (CloudFront)
+      - 1.1 270fdef5b99b63ae592608f44e3043b6.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD51-C4
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - nLx-JRp0QcOHUySQxDO5n0RVdpWO0CWdgKl_ho9J_edAT6-jV0EhtQ==
+      - dFOqEGIwOCwqrxQgcyxvgUoIbt9deAMBZE5hy5XxUAk08KtC9ZuLjw==
+      Age:
+      - '4404'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","genre_ids":[18,878,53,12],"id":42470,"original_language":"en","original_title":"The
@@ -63,5 +65,5 @@ http_interactions:
         in an assassination attempt. Now he is in a race to discover who is the target,
         and where the dolphins are, before the attempt is carried out.","popularity":4.183,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","release_date":"1973-12-19","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}],"total_pages":1,"total_results":1}'
-  recorded_at: Fri, 13 Oct 2023 15:57:04 GMT
+  recorded_at: Fri, 13 Oct 2023 16:29:57 GMT
 recorded_with: VCR 6.2.0
