--- a/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/page_still_renders_when_nothing_is_entered_into_the_search.yml
+++ b/spec/fixtures/vcr_cassettes/Welcome_Index/keyword_search/page_still_renders_when_nothing_is_entered_into_the_search.yml
@@ -24,37 +24,39 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
-      Date:
-      - Fri, 13 Oct 2023 15:57:05 GMT
       Server:
       - openresty
-      Cache-Control:
-      - public, max-age=23622
       X-Memc:
       - HIT
       X-Memc-Key:
       - 0ad04c4a8f86817194f97d0815bf2d05
       X-Memc-Age:
-      - '20592'
+      - '17253'
       X-Memc-Expires:
-      - '2056'
+      - '7827'
+      Date:
+      - Fri, 13 Oct 2023 15:16:34 GMT
+      Cache-Control:
+      - public, max-age=21795
       Etag:
       - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 4657350ff2715d2be9ad9783d238616a.cloudfront.net (CloudFront)
+      - 1.1 acb55e8d2b8ad7df45561a8bccaaa688.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD51-C4
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - ZXwQNOOT3ot30rwE_Ggf-eav3DtTUHZ2JgT9KWT0XX55YYRcUcqpDw==
+      - aRuJ_-U1DouvGtuIak60AgEYogQ7F_YtkeA4DWBr9rP-EubZfS71Zw==
+      Age:
+      - '4404'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
-  recorded_at: Fri, 13 Oct 2023 15:57:05 GMT
+  recorded_at: Fri, 13 Oct 2023 16:29:57 GMT
 recorded_with: VCR 6.2.0
