--- a/spec/fixtures/vcr_cassettes/Viewing_Party_New/_sad_path_will_return_error_is_duration_is_blank.yml
+++ b/spec/fixtures/vcr_cassettes/Viewing_Party_New/_sad_path_will_return_error_is_duration_is_blank.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 13 Oct 2023 03:24:20 GMT
+      - Fri, 13 Oct 2023 15:16:35 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25226
+      - public, max-age=23967
       X-Memc:
       - HIT
       X-Memc-Key:
       - 4b195b5bc531430b075228584131165f
       X-Memc-Age:
-      - '9670'
+      - '25528'
       X-Memc-Expires:
-      - '16314'
+      - '958'
       Etag:
-      - W/"45ab8083ddd2d8b96e3af5e356a60ca5"
+      - W/"ff3598050ab5cdf1cc1045f0d7165e61"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 a47d45d25cc354507eae77aba89ca252.cloudfront.net (CloudFront)
+      - 1.1 b963086ba799e00936372ebe90b8f6b4.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - 38W94V9tZ1ay1yDzi4aOp9qDWxUzzLU8p_3Kmwkq5b2nDJ2O_1wBEg==
+      - gXprOV5r7W41QDd25wam_WSf8vAmq1Fa1U73RZKBfgMAHwUUGVKpBg==
       Age:
-      - '7582'
+      - '6219'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","belongs_to_collection":null,"budget":0,"genres":[{"id":18,"name":"Drama"},{"id":878,"name":"Science
@@ -64,15 +64,15 @@ http_interactions:
         dolphins to speak and understand English, although they do have a limited
         vocabulary. When the dolphins are stolen, he discovers they''re to be used
         in an assassination attempt. Now he is in a race to discover who is the target,
-        and where the dolphins are, before the attempt is carried out.","popularity":2.988,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","production_companies":[{"id":494,"logo_path":"/ioc65azmsAeL1XQN4dFnrpdJoMO.png","name":"AVCO
+        and where the dolphins are, before the attempt is carried out.","popularity":4.183,"poster_path":"/vLztqesi2Dj5Ny74u33GufVzKR6.jpg","production_companies":[{"id":494,"logo_path":"/ioc65azmsAeL1XQN4dFnrpdJoMO.png","name":"AVCO
         Embassy Pictures","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1973-12-19","revenue":0,"runtime":104,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Unwittingly,
         he trained a dolphin to kill the president of the United States.","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}'
-  recorded_at: Fri, 13 Oct 2023 05:30:42 GMT
+  recorded_at: Fri, 13 Oct 2023 17:00:13 GMT
 - request:
     method: get
-    uri: https://api.themoviedb.org/3/movie/movie_id?api_key=f7288e89c67ddeca054747d31c85225c
+    uri: https://api.themoviedb.org/3/movie/0?api_key=f7288e89c67ddeca054747d31c85225c
     body:
       encoding: US-ASCII
       string: ''
@@ -95,37 +95,35 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 13 Oct 2023 05:18:40 GMT
+      - Fri, 13 Oct 2023 17:00:14 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=24676
+      - public, max-age=24264
       X-Memc:
       - MISS
       X-Memc-Key:
-      - 9ea9204611ad55c7f8f79d569b01d235
+      - 0e0ea920af5920cd4be6a197189f1cf9
       X-Memc-Age:
       - '0'
       X-Memc-Expires:
-      - '24676'
+      - '24264'
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Error from cloudfront
       Via:
-      - 1.1 9204cf44179493ed42c678800a26918a.cloudfront.net (CloudFront)
+      - 1.1 730d0b7e5f5de3b777d629325ecdb89c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - FqV8MtV6nvatcYLowR8ZQ2ZcTLFm7LlICZOhD502dmURdfuOlE-xjg==
-      Age:
-      - '722'
+      - _CBhO3xE46I_h4Djw9mJycLmppPqnSaKpZpMYvZC8r--9eWWiEjCBw==
     body:
       encoding: ASCII-8BIT
       string: '{"success":false,"status_code":34,"status_message":"The resource you
         requested could not be found."}'
-  recorded_at: Fri, 13 Oct 2023 05:30:42 GMT
+  recorded_at: Fri, 13 Oct 2023 17:00:14 GMT
 recorded_with: VCR 6.2.0
