--- a/spec/fixtures/vcr_cassettes/User_Movies_Page/has_a_Discover_Page_button.yml
+++ b/spec/fixtures/vcr_cassettes/User_Movies_Page/has_a_Discover_Page_button.yml
@@ -24,12 +24,8 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
-      Date:
-      - Thu, 12 Oct 2023 22:16:38 GMT
       Server:
       - openresty
-      Cache-Control:
-      - public, max-age=26011
       X-Memc:
       - HIT
       X-Memc-Key:
@@ -38,27 +34,29 @@ http_interactions:
       - '9953'
       X-Memc-Expires:
       - '12932'
+      Date:
+      - Fri, 13 Oct 2023 16:45:00 GMT
+      Cache-Control:
+      - public, max-age=23527
       Etag:
       - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
-      - Hit from cloudfront
+      - RefreshHit from cloudfront
       Via:
-      - 1.1 2ad801a60bd36fbeb6a62fab7eabe330.cloudfront.net (CloudFront)
+      - 1.1 db94b8e3e5f45aab1e90db086a8debc0.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - ioySzfGZjIT-BVyiOkZY469gyAdX6Bhn1ZLGwfHgo7udjLcq-kwcrA==
-      Age:
-      - '2489'
+      - 2U4-x0xj_XaxxRTigo9hq-3U7urBvm24bXoO-nC77c11knlDEBqtZA==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
-  recorded_at: Thu, 12 Oct 2023 22:58:07 GMT
+  recorded_at: Fri, 13 Oct 2023 16:45:00 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/search/movie?api_key=<API_KEY>&query=
@@ -83,12 +81,8 @@ http_interactions:
       - chunked
       Connection:
       - keep-alive
-      Date:
-      - Thu, 12 Oct 2023 22:16:38 GMT
       Server:
       - openresty
-      Cache-Control:
-      - public, max-age=26011
       X-Memc:
       - HIT
       X-Memc-Key:
@@ -97,6 +91,10 @@ http_interactions:
       - '9953'
       X-Memc-Expires:
       - '12932'
+      Date:
+      - Fri, 13 Oct 2023 16:45:00 GMT
+      Cache-Control:
+      - public, max-age=23527
       Etag:
       - W/"0e23279b004381f72a34159d5c7dfd1f"
       Vary:
@@ -105,17 +103,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 29f1da35ce271d2cdc88184ed0c1f86c.cloudfront.net (CloudFront)
+      - 1.1 4a3448a83573e51d340356257951f57a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - NPOgXv8GaoZ_kiQivYBklHya_zhv4li3aWs-cG5i_h5CoqbRMBxrtw==
-      Age:
-      - '2489'
+      - nvG66tDG2n2961LlkSp4iXlVpdS7QzudqAWhPSsZu-vDs06zk5OrMQ==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[],"total_pages":1,"total_results":0}'
-  recorded_at: Thu, 12 Oct 2023 22:58:07 GMT
+  recorded_at: Fri, 13 Oct 2023 16:45:00 GMT
 recorded_with: VCR 6.2.0
