--- a/spec/fixtures/vcr_cassettes/Viewing_Party_New/_sad_path_will_return_error_is_duration_is_blank.yml
+++ b/spec/fixtures/vcr_cassettes/Viewing_Party_New/_sad_path_will_return_error_is_duration_is_blank.yml
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 b963086ba799e00936372ebe90b8f6b4.cloudfront.net (CloudFront)
+      - 1.1 270fdef5b99b63ae592608f44e3043b6.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - gXprOV5r7W41QDd25wam_WSf8vAmq1Fa1U73RZKBfgMAHwUUGVKpBg==
+      - "-AOvMDdkuJHaHOUGClMxgYEujaCbOgUXKJ-lbonkNe2Ie53Kojxczw=="
       Age:
-      - '6219'
+      - '18859'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","belongs_to_collection":null,"budget":0,"genres":[{"id":18,"name":"Drama"},{"id":878,"name":"Science
@@ -69,7 +69,7 @@ http_interactions:
         States of America"}],"release_date":"1973-12-19","revenue":0,"runtime":104,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Unwittingly,
         he trained a dolphin to kill the president of the United States.","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}'
-  recorded_at: Fri, 13 Oct 2023 17:00:13 GMT
+  recorded_at: Fri, 13 Oct 2023 20:30:54 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/0?api_key=f7288e89c67ddeca054747d31c85225c
@@ -95,11 +95,11 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 13 Oct 2023 17:00:14 GMT
+      - Fri, 13 Oct 2023 20:30:54 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=24264
+      - public, max-age=22145
       X-Memc:
       - MISS
       X-Memc-Key:
@@ -107,23 +107,23 @@ http_interactions:
       X-Memc-Age:
       - '0'
       X-Memc-Expires:
-      - '24264'
+      - '22145'
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Error from cloudfront
       Via:
-      - 1.1 730d0b7e5f5de3b777d629325ecdb89c.cloudfront.net (CloudFront)
+      - 1.1 4a3448a83573e51d340356257951f57a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - _CBhO3xE46I_h4Djw9mJycLmppPqnSaKpZpMYvZC8r--9eWWiEjCBw==
+      - lq8apIsJNCAtgRAHrZJgVcpR27l750s4CHNMhVA5IKMZZKLdH_p6MA==
     body:
       encoding: ASCII-8BIT
       string: '{"success":false,"status_code":34,"status_message":"The resource you
         requested could not be found."}'
-  recorded_at: Fri, 13 Oct 2023 17:00:14 GMT
+  recorded_at: Fri, 13 Oct 2023 20:30:54 GMT
 recorded_with: VCR 6.2.0
