--- a/spec/fixtures/vcr_cassettes/Viewing_Party_New/creates_viewing_parties_with_attributes.yml
+++ b/spec/fixtures/vcr_cassettes/Viewing_Party_New/creates_viewing_parties_with_attributes.yml
@@ -25,19 +25,19 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 13 Oct 2023 15:57:06 GMT
+      - Fri, 13 Oct 2023 15:16:35 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22494
+      - public, max-age=23967
       X-Memc:
       - HIT
       X-Memc-Key:
       - 4b195b5bc531430b075228584131165f
       X-Memc-Age:
-      - '989'
+      - '25528'
       X-Memc-Expires:
-      - '24461'
+      - '958'
       Etag:
       - W/"ff3598050ab5cdf1cc1045f0d7165e61"
       Vary:
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 1bc5cb35fce618729d22b7ee2088cdce.cloudfront.net (CloudFront)
+      - 1.1 9367844cfa8aaebd6a8f032ea2e7d4ec.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD51-C4
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - qBjRERC6k7Za6Uez4j5B8paVRPsFMlD_7GBnCQBhK8y0X_2s4wVA6A==
+      - Zm9-UP3aItFfi6uSGk0dOWIAg2y-Npk20wKdjKTon1-tqJEzuTChUw==
       Age:
-      - '1'
+      - '18858'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","belongs_to_collection":null,"budget":0,"genres":[{"id":18,"name":"Drama"},{"id":878,"name":"Science
@@ -69,7 +69,7 @@ http_interactions:
         States of America"}],"release_date":"1973-12-19","revenue":0,"runtime":104,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Unwittingly,
         he trained a dolphin to kill the president of the United States.","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}'
-  recorded_at: Fri, 13 Oct 2023 15:57:07 GMT
+  recorded_at: Fri, 13 Oct 2023 20:30:53 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/49012?api_key=f7288e89c67ddeca054747d31c85225c
@@ -95,19 +95,19 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 13 Oct 2023 15:55:54 GMT
+      - Fri, 13 Oct 2023 15:16:24 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25939
+      - public, max-age=25286
       X-Memc:
       - HIT
       X-Memc-Key:
       - e9d6154ab25394f91816ede51583e653
       X-Memc-Age:
-      - '5456'
+      - '3087'
       X-Memc-Expires:
-      - '22891'
+      - '25260'
       Etag:
       - W/"c2c05ab32180d8843f51b81f042cfd48"
       Vary:
@@ -116,15 +116,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 4657350ff2715d2be9ad9783d238616a.cloudfront.net (CloudFront)
+      - 1.1 dbb24f3b9579454525416ef48c0f512c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - ORD51-C4
+      - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - AtjRcpem66WUz9Qwd45ySbBZKWBa7GXtWSZxKQZXVgBAjSB3I_CElw==
+      - 9MJzskkGDNjS_mOX9CdTWPYJqPz3PWL29jGZpChvNLnScTcGVBkOaQ==
       Age:
-      - '73'
+      - '18869'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/p2h886S7r4znUYvp1ELOTq7jqUZ.jpg","belongs_to_collection":null,"budget":40000000,"genres":[{"id":35,"name":"Comedy"},{"id":10749,"name":"Romance"}],"homepage":"http://arthurthemovie.warnerbros.com/","id":49012,"imdb_id":"tt1334512","original_language":"en","original_title":"Arthur","overview":"A
@@ -133,7 +133,7 @@ http_interactions:
         Bros. Pictures","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"2011-04-08","revenue":48147945,"runtime":110,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Meet
         the world''s only loveable billionaire.","title":"Arthur","video":false,"vote_average":5.567,"vote_count":689}'
-  recorded_at: Fri, 13 Oct 2023 15:57:07 GMT
+  recorded_at: Fri, 13 Oct 2023 20:30:53 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/42470?api_key=f7288e89c67ddeca054747d31c85225c
@@ -180,15 +180,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 b963086ba799e00936372ebe90b8f6b4.cloudfront.net (CloudFront)
+      - 1.1 917f52e466585bc699c3b9819efba43a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P3
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - PkjK6KPWMEjPZpiVgoyqlKqohFtznrrxx-xxOcPPjPpdVWTNnt2FJQ==
+      - otBKDNUhxa6M_Sbw9tl5OCmkxTDWdDzQzD774Rt1AVRgZl00yqP0LA==
       Age:
-      - '2432'
+      - '18858'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/8MrWcsw5HqwRLvvNJS7doDq6xh0.jpg","belongs_to_collection":null,"budget":0,"genres":[{"id":18,"name":"Drama"},{"id":878,"name":"Science
@@ -203,5 +203,5 @@ http_interactions:
         States of America"}],"release_date":"1973-12-19","revenue":0,"runtime":104,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Unwittingly,
         he trained a dolphin to kill the president of the United States.","title":"The
         Day of the Dolphin","video":false,"vote_average":5.9,"vote_count":42}'
-  recorded_at: Fri, 13 Oct 2023 15:57:07 GMT
+  recorded_at: Fri, 13 Oct 2023 20:30:53 GMT
 recorded_with: VCR 6.2.0
